# FEM

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  uncrustify.cfg
FemSolver/: CMakeLists.txt  Config.h.in  MeshGenerator.cpp  MeshGenerator.hpp  test1.cpp
FemSolver/config/: Config.h.in  Config.hpp.in
FemSolver/config/cmake/modules/: FemSolverCommands.cmake  FindHYPRE.cmake  FindMETIS.cmake
patches/: netgen.patch
