cmake_minimum_required (VERSION 3.8 FATAL_ERROR)
PROJECT(FEM_SOLVER LANGUAGES C CXX)

# Require C++11 and disable compiler-specific extensions
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(FEM_SOLVER_VERSION_MAJOR 0)
set(FEM_SOLVER_VERSION_MINOR 0)
set(FEM_SOLVER_VERSION_PATCH 0)

option(USE_MPI "Enable MPI" OFF)
if(USE_MPI)
  option(BUILD_MPI "Build MPI" OFF)
endif()

option(USE_CUDA "Enable CUDA" OFF)
if (USE_CUDA)
  set(CUDA_ARCH "sm_61" CACHE STRING "Target CUDA architecture.")
  enable_language(CUDA)
  message(STATUS "Using CUDA architecture: ${CUDA_ARCH}")

  set(CMAKE_CUDA_STANDARD 11)
  set(CMAKE_CUDA_STANDARD_REQUIRED ON)
  set(CMAKE_CUDA_EXTENSIONS OFF)
  set(CMAKE_CUDA_FLAGS "-arch=${CUDA_ARCH} --expt-extended-lambda"
      CACHE STRING "CUDA flags set for FEM_SOLVER" FORCE)
  if(USE_MPI)
    set(CUDA_CCBIN_COMPILER ${MPI_CXX_COMPILER})
  else()
    set(CUDA_CCBIN_COMPILER ${CMAKE_CXX_COMPILER})
  endif()
  if (NOT MSVC)
    string(APPEND CMAKE_CUDA_FLAGS " -ccbin ${CUDA_CCBIN_COMPILER}")
  endif()
endif()

find_package(OpenMP REQUIRED)
if (OPENMP_FOUND)
  message(STATUS "FEM_SOLVER: using package OpenMP")
  set(LIBRARIES ${OPENMP_LIBRARIES})
  set(INCLUDE_DIRS ${OPENMP_INCLUDE_DIRS})
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
  set(USE_OPENMP ON)
else()
set(USE_OPENMP OFF)
endif()

# Set use compiler flags for configure based projects
set(C_FLAGS ${CMAKE_C_FLAGS} ${CMAKE_C_FLAGS_RELEASE})
set(CXX_FLAGS ${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE})
# set(Fortran_FLAGS ${CMAKE_Fortran_FLAGS} ${CMAKE_Fortran_FLAGS_RELEASE})
set(EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER} ${CMAKE_EXE_LINKER})

set(FEM_ARGS "-DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}"
             "-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}"
             "-DCMAKE_AR=${CMAKE_AR}"
             "-DCMAKE_LINKER=${CMAKE_LINKER}"
             "-DCMAKE_NM=${CMAKE_NM}"
             "-DCMAKE_OBJCOPY=${CMAKE_OBJCOPY}"
             "-DCMAKE_OBJDUMP=${CMAKE_OBJDUMP}"
             "-DCMAKE_RANLIB=${CMAKE_RANLIB}"
             "-DCMAKE_STRIP=${CMAKE_STRIP}"
             "-DCMAKE_EXE_LINKER_FLAGS=${CMAKE_EXE_LINKER_FLAGS}"
             "-DCMAKE_EXE_LINKER_FLAGS_DEBUG=${CMAKE_EXE_LINKER_FLAGS_DEBUG}"
             "-DCMAKE_EXE_LINKER_FLAGS_MINSIZEREL=${CMAKE_EXE_LINKER_FLAGS_MINSIZEREL}"
             "-DCMAKE_EXE_LINKER_FLAGS_RELEASE=${CMAKE_EXE_LINKER_FLAGS_RELEASE}"
             "-DCMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO=${CMAKE_EXE_LINKER_FLAGS_RELWITHDEBINFO}"
             "-DCMAKE_MODULE_LINKER_FLAGS=${CMAKE_MODULE_LINKER_FLAGS}"
             "-DCMAKE_MODULE_LINKER_FLAGS_DEBUG=${CMAKE_MODULE_LINKER_FLAGS_DEBUG}"
             "-DCMAKE_MODULE_LINKER_FLAGS_MINSIZEREL=${CMAKE_MODULE_LINKER_FLAGS_MINSIZEREL}"
             "-DCMAKE_MODULE_LINKER_FLAGS_RELEASE=${CMAKE_MODULE_LINKER_FLAGS_RELEASE}"
             "-DCMAKE_MODULE_LINKER_FLAGS_RELWITHDEBINFO=${CMAKE_MODULE_LINKER_FLAGS_RELWITHDEBINFO}"
             "-DCMAKE_SHARED_LINKER_FLAGS=${CMAKE_SHARED_LINKER_FLAGS}"
             "-DCMAKE_SHARED_LINKER_FLAGS_DEBUG=${CMAKE_SHARED_LINKER_FLAGS_DEBUG}"
             "-DCMAKE_SHARED_LINKER_FLAGS_MINSIZEREL=${CMAKE_SHARED_LINKER_FLAGS_MINSIZEREL}"
             "-DCMAKE_SHARED_LINKER_FLAGS_RELEASE=${CMAKE_SHARED_LINKER_FLAGS_RELEASE}"
             "-DCMAKE_SHARED_LINKER_FLAGS_RELWITHDEBINFO=${CMAKE_SHARED_LINKER_FLAGS_RELWITHDEBINFO}"
             "-DCMAKE_STATIC_LINKER_FLAGS=${CMAKE_STATIC_LINKER_FLAGS}"
             "-DCMAKE_STATIC_LINKER_FLAGS_DEBUG=${CMAKE_STATIC_LINKER_FLAGS_DEBUG}"
             "-DCMAKE_STATIC_LINKER_FLAGS_MINSIZEREL=${CMAKE_STATIC_LINKER_FLAGS_MINSIZEREL}"
             "-DCMAKE_STATIC_LINKER_FLAGS_RELEASE=${CMAKE_STATIC_LINKER_FLAGS_RELEASE}"
             "-DCMAKE_STATIC_LINKER_FLAGS_RELWITHDEBINFO=${CMAKE_STATIC_LINKER_FLAGS_RELWITHDEBINFO}"
             "-DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}"
             "-DCMAKE_C_COMPILER_AR=${CMAKE_C_COMPILER_AR}"
             "-DCMAKE_C_COMPILER_RANLIB=${CMAKE_C_COMPILER_RANLIB}"
             "-DCMAKE_C_FLAGS=${CMAKE_C_FLAGS}"
             "-DCMAKE_C_FLAGS_DEBUG=${CMAKE_C_FLAGS_DEBUG}"
             "-DCMAKE_C_FLAGS_MINSIZEREL=${CMAKE_C_FLAGS_MINSIZEREL}"
             "-DCMAKE_C_FLAGS_RELEASE=${CMAKE_C_FLAGS_RELEASE}"
             "-DCMAKE_C_FLAGS_RELWITHDEBINFO=${CMAKE_C_FLAGS_RELWITHDEBINFO}"
             "-DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}"
             "-DCMAKE_CXX_COMPILER_AR=${CMAKE_CXX_COMPILER_AR}"
             "-DCMAKE_CXX_COMPILER_RANLIB=${CMAKE_CXX_COMPILER_RANLIB}"
             "-DCMAKE_CXX_FLAGS=${CMAKE_CXX_FLAGS}"
             "-DCMAKE_CXX_FLAGS_DEBUG=${CMAKE_CXX_FLAGS_DEBUG}"
             "-DCMAKE_CXX_FLAGS_MINSIZEREL=${CMAKE_CXX_FLAGS_MINSIZEREL}"
             "-DCMAKE_CXX_FLAGS_RELEASE=${CMAKE_CXX_FLAGS_RELEASE}"
             "-DCMAKE_CXX_FLAGS_RELWITHDEBINFO=${CMAKE_CXX_FLAGS_RELWITHDEBINFO}"
             "-DCXX_STANDARD=${CXX_STANDARD}")
#             "-DCMAKE_Fortran_COMPILER=${CMAKE_Fortran_COMPILER}"
#             "-DCMAKE_Fortran_COMPILER_AR=${CMAKE_Fortran_COMPILER_AR}"
#             "-DCMAKE_Fortran_COMPILER_RANLIB=${CMAKE_Fortran_COMPILER_RANLIB}"
#             "-DCMAKE_Fortran_FLAGS=${CMAKE_Fortran_FLAGS}"
#             "-DCMAKE_Fortran_FLAGS_DEBUG=${CMAKE_Fortran_FLAGS_DEBUG}"
#             "-DCMAKE_Fortran_FLAGS_MINSIZEREL=${CMAKE_Fortran_FLAGS_MINSIZEREL}"
#             "-DCMAKE_Fortran_FLAGS_RELEASE=${CMAKE_Fortran_FLAGS_RELEASE}"
#             "-DCMAKE_Fortran_FLAGS_RELWITHDEBINFO=${CMAKE_Fortran_FLAGS_RELWITHDEBINFO}")

include(ExternalProject)

set(INCLUDE_DIRS "${CMAKE_INSTALL_PREFIX}/include")

if(USE_MPI)

  find_package(MPI REQUIRED)
  if (MPI_CXX_FOUND)
    list(APPEND LIBRARIES ${MPI_CXX_LIBRARIES})
    list(APPEND INCLUDE_DIRS ${MPI_CXX_INCLUDE_PATH})
  endif()

  set(MPI_COMPILER "-DMPIEXEC_EXECUTABLE=${MPIEXEC_EXECUTABLE}"
                   "-DMPIEXEC_MAX_NUMPROCS=${MPIEXEC_MAX_NUMPROCS}"
                   "-DMPIEXEC_NUMPROC_FLAG=${MPIEXEC_NUMPROC_FLAG}"
                   "-DMPIEXEC_POSTFLAGS=${MPIEXEC_POSTFLAGS}"
                   "-DMPIEXEC_PREFLAGS=${MPIEXEC_PREFLAGS}"
                   "-DMPI_CXX_ADDITIONAL_INCLUDE_DIRS=${MPI_CXX_ADDITIONAL_INCLUDE_DIRS}"
                   "-DMPI_CXX_COMPILER=${MPI_CXX_COMPILER}"
                   "-DMPI_CXX_COMPILE_DEFINITIONS=${MPI_CXX_COMPILE_DEFINITIONS}"
                   "-DMPI_CXX_COMPILE_OPTIONS=${MPI_CXX_COMPILE_OPTIONS}"
                   "-DMPI_CXX_HEADER_DIR=${MPI_CXX_HEADER_DIR}"
                   "-DMPI_CXX_LIB_NAMES=${MPI_CXX_LIB_NAMES}"
                   "-DMPI_CXX_LINK_FLAGS=${MPI_CXX_LINK_FLAGS}"
                   "-DMPI_CXX_SKIP_MPICXX=${MPI_CXX_SKIP_MPICXX}"
                   "-DMPI_C_ADDITIONAL_INCLUDE_DIRS=${MPI_C_ADDITIONAL_INCLUDE_DIRS}"
                   "-DMPI_C_COMPILER=${MPI_C_COMPILER}"
                   "-DMPI_C_COMPILE_DEFINITIONS=${MPI_C_COMPILE_DEFINITIONS}"
                   "-DMPI_C_COMPILE_OPTIONS=${MPI_C_COMPILE_OPTIONS}"
                   "-DMPI_C_HEADER_DIR=${MPI_C_HEADER_DIR}"
                   "-DMPI_C_LIB_NAMES=${MPI_C_LIB_NAMES}"
                   "-DMPI_C_LINK_FLAGS=${MPI_C_LINK_FLAGS}"
                   "-DMPI_mpi_LIBRARY=${MPI_mpi_LIBRARY}"
                   "-DMPI_mpi_cxx_LIBRARY=${MPI_mpi_cxx_LIBRARY}")


  list(APPEND HYPRE_ARGS ${MPI_COMPILER})
  list(APPEND HYPRE_ARGS "-DHYPRE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}")
  list(APPEND HYPRE_ARGS "-DHYPRE_USING_OPENMP=${USE_OPENMP}")

  ExternalProject_Add(hypre
    URL "https://computation.llnl.gov/projects/hypre-scalable-linear-solvers-multigrid-methods/download/hypre-2.10.0b.tar.gz"
    # CMAKE_ARGS ${FEM_ARGS}
    CONFIGURE_COMMAND ${CMAKE_COMMAND} ${FEM_ARGS} ${HYPRE_ARGS} <SOURCE_DIR>/src
  )

  list(APPEND LIBRARIES "${CMAKE_INSTALL_PREFIX}/lib/libHYPRE.a")

  list(APPEND METIS_ARGS ${MPI_COMPILER})
  list(APPEND METIS_ARGS "-DGKLIB_PATH=<SOURCE_DIR>/GKlib")
  list(APPEND METIS_ARGS "-DOPENMP=${USE_OPENMP}")

  ExternalProject_Add(metis
    URL "http://glaros.dtc.umn.edu/gkhome/fetch/sw/metis/metis-5.1.0.tar.gz"
    CMAKE_ARGS ${FEM_ARGS} ${METIS_ARGS}
  )

  list(APPEND LIBRARIES "${CMAKE_INSTALL_PREFIX}/lib/libmetis.a")
endif()

if (USE_MPI)
  list(APPEND MFEM_ARGS ${MPI_COMPILER})
  list(APPEND MFEM_ARGS "-DMETIS_DIR=${CMAKE_INSTALL_PREFIX}")
  list(APPEND MFEM_ARGS "-DHYPRE_DIR=${CMAKE_INSTALL_PREFIX}")
endif()
list(APPEND MFEM_ARGS "-DMFEM_USE_CUDA=${USE_CUDA}")
if (USE_CUDA)
  list(APPEND MFEM_ARGS "-DCUDA_ARCH=${CUDA_ARCH}")
endif()
list(APPEND MFEM_ARGS "-DMFEM_USE_MPI=${USE_MPI}")
list(APPEND MFEM_ARGS "-DMFEM_ENABLE_TESTING=ON")
list(APPEND MFEM_ARGS "-DMFEM_ENABLE_EXAMPLES=ON")
list(APPEND MFEM_ARGS "-DMFEM_ENABLE_MINIAPPS=ON")
list(APPEND MFEM_ARGS "-DMFEM_USE_OPENMP=${USE_OPENMP}")
list(APPEND MFEM_ARGS "-DMFEM_THREAD_SAFE=ON")

if (USE_MPI)
  set(MFEM_DEPENDS hypre metis)
else()
  set(MFEM_DEPENDS "")
endif()

ExternalProject_Add(mfem
  # URL "http://mfem.github.io/releases/mfem-3.4.tgz"
  # URL "https://github.com/mfem/mfem/archive/v4.0-rc2.tar.gz"
  GIT_REPOSITORY git@github.com:mfem/mfem.git
  GIT_TAG memory-dev
  CMAKE_ARGS ${FEM_ARGS} ${MFEM_ARGS}
  DEPENDS ${MFEM_DEPENDS}
)

list(APPEND LIBRARIES "${CMAKE_INSTALL_PREFIX}/lib/libmfem.a")

list(APPEND OPENCASCADE_ARGS "-DOCE_INSTALL_PREFIX=../install")
if(USE_OPENMP)
  list(APPEND OPENCASCADE_ARGS "-DOCE_MULTITHREAD_LIBRARY=OPENMP")
endif()
list(APPEND OPENCASCADE_ARGS "-DOCE_TESTING=OFF")
list(APPEND OPENCASCADE_ARGS "-DOCE_VISUALISATION=OFF")
list(APPEND OPENCASCADE_ARGS "-DOCE_ADD_HEADERS=ON")
list(APPEND OPENCASCADE_ARGS "-DOCE_BUILD_SHARED_LIB=OFF")
list(APPEND OPENCASCADE_ARGS "-DOCE_BUILD_STATIC_LIB=ON")
list(APPEND OPENCASCADE_ARGS "-DOCE_DISABLE_X11=OFF")

# ExternalProject_Add(opencascade
#   URL "https://github.com/tpaviot/oce/archive/OCE-0.18.3.tar.gz"
#   CMAKE_ARGS ${FEM_ARGS} ${OPENCASCADE_ARGS}
#   DEPENDS metis
# )

list(APPEND NETGEN_ARGS "-DUSE_MPI=${USE_MPI}")
list(APPEND NETGEN_ARGS "-DUSE_PYTHON=OFF")
list(APPEND NETGEN_ARGS "-DUSE_GUI=OFF")
list(APPEND NETGEN_ARGS "-DUSE_OCC=ON")

# list(APPEND NETGEN_ARGS "--prefix=${CMAKE_INSTALL_PREFIX}")
# list(APPEND NETGEN_ARGS "--disable-gui")
# list(APPEND NETGEN_ARGS "--enable-parallel")
# list(APPEND NETGEN_ARGS "--disable-shared")
# list(APPEND NETGEN_ARGS "--enable-static")
# list(APPEND NETGEN_ARGS "--enable-nglib")
# list(APPEND NETGEN_ARGS "--with-metis=${CMAKE_INSTALL_PREFIX}")
# list(APPEND NETGEN_ARGS "CC=/usr/bin/mpicc")
# list(APPEND NETGEN_ARGS "CXX=/usr/bin/mpicxx")

# ExternalProject_Add(netgen
#   # URL "https://netcologne.dl.sourceforge.net/project/netgen-mesher/netgen-mesher/5.3/netgen-5.3.1.tar.gz"
#   # CONFIGURE_COMMAND cd <BINARY_DIR> && <SOURCE_DIR>/configure --srcdir=<SOURCE_DIR> ${NETGEN_ARGS}
#   URL "https://github.com/NGSolve/netgen/archive/v6.2.1810.tar.gz"
#   CMAKE_ARGS ${FEM_ARGS} ${NETGEN_ARGS}
#   DEPENDS metis opencascade
# )

# list(APPEND PLASM_ARGS "CXX=/usr/bin/mpicxx")

# ExternalProject_Add(plasm
#   URL "http://www.plasm.net/download/latest-classic-release-51/sources.tgz"
#   CONFIGURE_COMMAND ""
# )
if (NOT USE_CUDA)
  list(APPEND GLVIS_ARGS "-DMFEM_DIR=${CMAKE_INSTALL_PREFIX}")

  ExternalProject_Add(glvis
    URL "http://glvis.github.io/releases/glvis-3.4.tgz"
    CMAKE_ARGS ${FEM_ARGS} ${GLVIS_ARGS}
    DEPENDS mfem
  )
endif()

add_subdirectory(FemSolver)
